Admonitions with tabs and other edits

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -47,6 +47,6 @@
 /* side bar menu color */
 [data-theme="dark"] .menu__link--sublist {
   font-weight: bold;
-  color: #fb6c9f;
+  color: #ff3b80;
   background: none;
 }
